--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ litestar = {extras = ["standard"], version = "^2.7.0"}
 aiosqlite = "^0.20.0"
 sqlalchemy = "^2.0.28"
 advanced-alchemy = "^0.7.4"
+pydantic = "^2.6.3"
 
 
 [tool.poetry.group.dev.dependencies]
