--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pydantic = "^2.6.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
+pytest-asyncio = "^0.23.5.post1"
 
 [build-system]
 requires = ["poetry-core"]
