--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ pydantic = "^2.6.3"
 pytest = "^8.1.1"
 pytest-asyncio = "^0.23.5.post1"
 
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
