--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,13 +7,13 @@ on:
 
 jobs:
   validate:
-    uses: ./.github.workflows/validate_ci.yaml
+    uses: ./.github/workflows/validate_ci.yaml
 
   test: "test (${{ matrix.python-version }})"
   strategy:
     failfast: true
     matrix:
       python-version: [ "3.11", "3.12" ]
-    uses: ./.github.workflows/test_ci.yaml
+    uses: ./.github/workflows/test_ci.yaml
     with:
       python-version: ${{ matrix.python-version }}
