--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,11 +9,12 @@ jobs:
   validate:
     uses: ./.github/workflows/validate_ci.yaml
 
-  test: "test (${{ matrix.python-version }})"
-  strategy:
-    failfast: true
-    matrix:
-      python-version: [ "3.11", "3.12" ]
-    uses: ./.github/workflows/test_ci.yaml
-    with:
-      python-version: ${{ matrix.python-version }}
+  test:
+    name: "test (${{ matrix.python-version }})"
+    strategy:
+      failfast: true
+      matrix:
+        python-version: [ "3.11", "3.12" ]
+      uses: ./.github/workflows/test_ci.yaml
+      with:
+        python-version: ${{ matrix.python-version }}
