--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,9 @@ on:
 jobs:
   validate:
     uses: ./.github/workflows/validate_ci.yaml
+    with:
+      python-version: "3.12"
+      os: "ubuntu:latest"
 
   test:
     name: "test (${{ matrix.python-version }})"
@@ -18,3 +21,8 @@ jobs:
     uses: ./.github/workflows/test_ci.yaml
     with:
       python-version: ${{ matrix.python-version }}
+
+  upload-test-coverage:
+    runs-on: ubuntu-latest
+    needs: test
+    uses: ./.github/workflows/upload_coverage.yaml
