--- a/.github/workflows/test_ci.yaml
+++ b/.github/workflows/test_ci.yaml
@@ -31,10 +31,10 @@ jobs:
           python-version: ${{ inputs.python-version }}
 
       - name: Setup poetry
-        uses: Gr1N/setup-poetry@v8
+        uses: Gr1N/setup-poetry@v9
 
       - name: Cache Poetry
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ inputs.os }}-poetry-${{ hashFiles('poetry.lock') }}
@@ -46,10 +46,8 @@ jobs:
       - name: Test with pytest
         run: make test
 
-      - name: Rename Coverage
-        run: mv .coverage .coverage.${{ inputs.python-version }}
-
-      - uses: actions/upload-artifact@v3
+      - name: Upload artifact
+        if: ${{ input.python-version }} == '3.12'
+        uses: actions/upload-artifact@v3
         with:
-          name: coverage-data
-          path: .coverage.${{ inputs.python-version }}
+          files: .coverage
