ci: fix invalid variable

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,6 @@ jobs:
     with:
       python-version: ${{ matrix.python-version }}
 
-  upload-test-coverage:
+  coverage:
     needs: test
     uses: ./.github/workflows/upload_coverage.yaml
