--- a/.github/workflows/test_ci.yaml
+++ b/.github/workflows/test_ci.yaml
@@ -50,4 +50,4 @@ jobs:
         if: ${{ inputs.python-version }} == '3.12'
         uses: actions/upload-artifact@v3
         with:
-          files: .coverage
+          name: .coverage
