ci: fix upload coverage data

--- a/.github/workflows/test_ci.yaml
+++ b/.github/workflows/test_ci.yaml
@@ -47,8 +47,8 @@ jobs:
         run: make test
 
       - name: Upload artifact
-        if: ${{ inputs.python-version }} == '3.12'
-        uses: actions/upload-artifact@v3
+        if: ${{ inputs.python-version  == '3.12' }}
+        uses: actions/upload-artifact@v4
         with:
-          name: .coverage
-          path: ./
+          name: coverage-data
+          path: .coverage
