--- a/.github/workflows/upload_coverage.yaml
+++ b/.github/workflows/upload_coverage.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v3
         with:
-          name: .coverage
+          name: coverage-data
 
       - name: Combine coverage files
         run: |
