ci: provide python version

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,8 @@ jobs:
       matrix:
         python-version: ["3.11", "3.12"]
     uses: ./.github/workflows/install_dependencies.yaml
+    with:
+      python-version: ${{ matrix.python-version }}
 
   validate:
     needs: setup
