--- a/.github/workflows/install_dependencies.yaml
+++ b/.github/workflows/install_dependencies.yaml
@@ -34,7 +34,13 @@ jobs:
           poetry install
 
       - name: Cache Poetry
-        uses: actions/cache/save@v4
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ inputs.os }}-poetry-cache
+
+      - name: Cache Poetry Venv
+        uses: actions/cache@v4
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ inputs.os }}-poetry-${{ hashFiles('poetry.lock') }}
