--- a/.github/workflows/validate_ci.yaml
+++ b/.github/workflows/validate_ci.yaml
@@ -24,8 +24,14 @@ jobs:
         with:
           python-version: ${{ inputs.python-version }}
 
-      - name: Restore Cache
-        uses: actions/cache/restore@v4
+      - name: Restore Poetry Cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ inputs.os }}-poetry-cache
+
+      - name: Restore Cache Venv
+        uses: actions/cache@v4
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ inputs.os }}-poetry-${{ hashFiles('poetry.lock') }}
