--- a/.github/workflows/install_dependencies.yaml
+++ b/.github/workflows/install_dependencies.yaml
@@ -27,17 +27,11 @@ jobs:
           python-version: ${{ inputs.python-version }}
 
       - name: Setup poetry
-        uses: Gr1N/setup-poetry@v9
+        run: pipx install poetry
 
       - name: Install dependencies
         run: |
           poetry install
-
-      - name: Cache Poetry
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pypoetry
-          key: ${{ inputs.os }}-poetry-cache
 
       - name: Cache Poetry Venv
         uses: actions/cache@v4
