--- a/.github/workflows/install_dependencies.yaml
+++ b/.github/workflows/install_dependencies.yaml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          poetry env use ${{ inputs.python-version }}
           poetry install
 
       - name: Cache Poetry Venv
