ci: retry with tests

--- a/.github/workflows/install_dependencies.yaml
+++ b/.github/workflows/install_dependencies.yaml
@@ -27,7 +27,7 @@ jobs:
           python-version: ${{ inputs.python-version }}
 
       - name: Setup poetry
-        run: pip install poetry
+        run: pipx install poetry
 
       - name: Install dependencies
         run: |
