ci: retry with coverage

--- a/.github/workflows/upload_coverage.yaml
+++ b/.github/workflows/upload_coverage.yaml
@@ -20,6 +20,7 @@ jobs:
       - name: Combine coverage files
         run: |
           python -Im pip install coverage covdefaults
+          python -Im coverage combine
           python -Im coverage xml -i
 
       - name: Upload report to Codecov
