doc: update slug #11

--- a/.github/workflows/upload_coverage.yaml
+++ b/.github/workflows/upload_coverage.yaml
@@ -28,3 +28,4 @@ jobs:
         with:
           files: coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
+          slug: haryle/TodoAppBE
