--- a/.github/workflows/test_ci.yaml
+++ b/.github/workflows/test_ci.yaml
@@ -1,5 +1,3 @@
-name: Test
-
 on:
   workflow_call:
     inputs:
@@ -33,15 +31,11 @@ jobs:
       - name: Setup poetry
         run: pip install poetry
 
-      - name: Restore Cached Poetry
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ inputs.os }}-poetry-${{inputs.python-version}}-${{ hashFiles('poetry.lock') }}
+      - name: Install test dependencies
+        run: poetry install
 
       - name: Test with pytest
         run: |
-          poetry env use ${{ inputs.python-version }}
           make test
 
       - name: Rename coverage file
@@ -50,4 +44,4 @@ jobs:
 
       - name: Upload coverage
         if: inputs.do-coverage
-        uses: codecov/codecov-action@v3.2.4
+        uses: codecov/codecov-action@v3
