--- a/.github/workflows/validate_ci.yaml
+++ b/.github/workflows/validate_ci.yaml
@@ -1,5 +1,3 @@
-name: Validate
-
 on:
   workflow_call:
     inputs:
@@ -27,15 +25,11 @@ jobs:
       - name: Set up Poetry
         run: pip install poetry
 
-      - name: Restore Cache Venv
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ inputs.os }}-poetry-${{inputs.python-version}}-${{ hashFiles('poetry.lock') }}
+      - name: Install Dependencies
+        run: poetry install --with analysis
 
       - name: Run Mypy
         run: |
-          poetry env use ${{ inputs.python-version }}
           make analysis 
 
       - name: Run Ruff
