--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,11 @@ ruff = "^0.3.3"
 mypy = "^1.9.0"
 pytest-cov = "^4.1.0"
 
+
+[tool.poetry.group.analysis.dependencies]
+ruff = "^0.3.3"
+mypy = "^1.9.0"
+
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 
