ci: fix sonar organisation fields

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=harryle
-sonar.projectKey=TodoAppBE
+sonar.organization=haryle
+sonar.projectKey=haryle_TodoAppBE
 sonar.python.version=3.11, 3.12
 sonar.sourceEncoding=UTF-8
 sonar.sources=backend
